--- a/src/component/pricingPage/priceStyle.scss
+++ b/src/component/pricingPage/priceStyle.scss
@@ -5,25 +5,39 @@ $brandColor: rgba(32, 145, 249, 1);
   align-items: $alingItems;
   flex-direction: $direction;
 }
-
 @mixin contentSize($hgt, $wdt) {
   height: $hgt;
   width: $wdt;
 }
-
 @mixin fontProp($size, $isBold) {
   font-size: $size;
   font-weight: $isBold;
 }
-
 * {
   margin: 0;
   padding: 0;
   letter-spacing: 0.03em;
   font-family: sans-serif;
 }
+[type="button"] {
+  @include contentSize(42px, 92px);
+  @include fontProp(0.78em, bold);
+  background-color: $brandColor;
+  color: white;
+  border-radius: 5px;
+  border: 0;
+  padding: 6px;
+  box-sizing: border-box;
 
-/////about price page
+  &:active {
+    transform: scale(0.93);
+  }
+}
+p {
+  color: rgb(139, 139, 139);
+}
+
+//about price
 .aboutPrice {
   @include display-prop(center, center, column);
   height: 88vh;
@@ -31,7 +45,7 @@ $brandColor: rgba(32, 145, 249, 1);
   background: rgb(248, 248, 248);
 
   div {
-    width: 210px;
+    width: auto !important;
     text-align: center;
 
     h3 {
@@ -39,7 +53,8 @@ $brandColor: rgba(32, 145, 249, 1);
       color: rgb(120, 120, 120);
     }
     h1 {
-      height: 95px;
+      height: auto;
+      min-width: 291px;
       font-weight: 800;
 
       span {
@@ -60,17 +75,8 @@ $brandColor: rgba(32, 145, 249, 1);
     margin: 13px;
     text-align: center;
   }
-
-  div {
-    width: auto;
-    h1 {
-      height: auto;
-      min-width: 291px;
-    }
-  }
 }
 
-////// FAQ
 .FAQ {
   @include contentSize(73vh, 100%);
   display: grid;
@@ -89,7 +95,7 @@ $brandColor: rgba(32, 145, 249, 1);
 
     &::after {
       box-sizing: border-box;
-      content: url("./sub_plan_info/Vector.png");
+      content: url("./sub_plan_info/image/Vector.png");
       float: right;
       height: 22px;
       width: 21px;
@@ -123,12 +129,14 @@ $brandColor: rgba(32, 145, 249, 1);
 }
 
 //////// plan info
+
 .cost_info {
   height: 145vh;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   box-sizing: border-box;
+  gap: 22px;
 
   .toggle_plan {
     height: 33px;
@@ -151,110 +159,189 @@ $brandColor: rgba(32, 145, 249, 1);
 
   .select_plan {
     @include display-prop(space-evenly, center, row);
-    padding: 22px;
     height: 80%;
-    gap: 26px;
+    gap: 16px;
 
-    #free_plan,
-    #standard_plan,
-    #business_plan {
-      @include display-prop(space-evenly, center, column);
-      @include contentSize(70%, 23%);
-      min-height: 450px;
-      min-width: 223px;
-      border: 2px solid $brandColor;
-      border-radius: 7px;
-      padding: 12px;
+    .planType {
+      @include display-prop(space-evenly, center, row);
+      width: 100%;
+      height: 90%;
+      gap: 12px;
 
-      button {
-        width: 70%;
-      }
-
-      &:nth-child(even) {
-        border: 0;
-        background: linear-gradient(
-          to top right,
-          rgba(0, 243, 185, 1),
-          rgba(33, 135, 255, 1)
-        );
-        p,
-        h1,
-        h3,
-        li,
-        div {
-          color: white !important;
-        }
+      .planInfo_container {
+        @include display-prop(space-evenly, center, column);
+        @include contentSize(413px, 21%);
+        min-width: 223px;
+        border: 2px solid $brandColor;
+        border-radius: 7px;
+        padding: 12px;
 
         button {
-          background: white;
-          color: $brandColor;
+          width: 70%;
         }
-      }
 
-      p,
-      li {
-        font-size: 0.9em;
-        margin: 6% 0 6% 0;
-      }
-
-      .cost_of_plan {
-        width: 68%;
-        height: 41px;
-        display: grid;
-        color: $brandColor;
-        grid-template-columns: auto auto;
-
-        P {
-          @include fontProp(0.7em, bold);
-          margin: 0;
-          color: rgba(32, 145, 249, 0.5);
-        }
-        h1 {
-          grid-row: 1/3;
-          grid-column: 1/2;
-          padding-right: 11px;
-          font-size: 2.3em;
-          text-align: end;
-        }
-      }
-
-      ul {
+        p,
         li {
-          line-height: 1.4rem;
-          list-style: none;
+          font-size: 0.9em;
+          margin: 6px 0 6px 0;
+        }
 
-          &::before {
-            @include contentSize(24px, 24px);
-            content: "";
-            display: inline-block;
-            margin-right: 15px;
-            position: relative;
-            top: 4px;
+        .cost_of_plan {
+          width: 68%;
+          height: 41px;
+          display: grid;
+          color: $brandColor;
+          grid-template-columns: auto auto;
+
+          P {
+            @include fontProp(0.7em, bold);
+            margin: 0;
+            color: rgba(32, 145, 249, 0.5);
+          }
+          h1 {
+            grid-row: 1/3;
+            grid-column: 1/2;
+            padding-right: 11px;
+            font-size: 2.3em;
+            text-align: end;
           }
         }
 
-        .selected::before {
-          background: url("./sub_plan_info/selected.png") no-repeat;
-          background-size: contain;
-        }
-        .notSelected::before {
-          background: url("./sub_plan_info/notSelected.png") no-repeat;
-          background-size: contain;
+        ul {
+          li {
+            line-height: 1.4rem;
+            list-style: none;
+
+            &::before {
+              @include contentSize(24px, 24px);
+              content: "";
+              display: inline-block;
+              margin-right: 15px;
+              position: relative;
+              top: 4px;
+            }
+          }
+
+          .selected::before {
+            background: url("./sub_plan_info/image/selected.png") no-repeat;
+            background-size: contain;
+          }
+          .notSelected::before {
+            background: url("./sub_plan_info/image/notSelected.png") no-repeat;
+            background-size: contain;
+          }
         }
 
-        .selected_with_white::before {
-          background: url("./sub_plan_info/standardPlanSelector.png") no-repeat;
-          background-size: contain;
+        &:nth-child(even) {
+          border: 0;
+          background: linear-gradient(
+            to top right,
+            rgba(0, 243, 185, 1),
+            rgba(33, 135, 255, 1)
+          );
+          p,
+          h1,
+          h3,
+          li,
+          div {
+            color: white !important;
+          }
+
+          button {
+            background: white;
+            color: $brandColor;
+          }
+
+          .selected_with_white::before {
+            background: url("./sub_plan_info/image/standardPlanSelector.png")
+              no-repeat;
+            background-size: contain;
+          }
+        }
+
+        &:last-child {
+          .fullySupported::before {
+            background: url("./sub_plan_info/image/selected.png") no-repeat;
+            background-size: contain;
+          }
+        }
+
+        .plan_desc {
+          text-align: center;
+
+          p {
+            @include fontProp(0.84em, bold);
+          }
         }
       }
+    }
+  }
+}
 
-      .plan_desc {
-        text-align: center;
-
-        p {
-          @include fontProp(0.84em, bold);
+@media (max-width: 785px) {
+  .cost_info {
+    height: auto;
+    .select_plan {
+      flex-direction: column;
+      .planType {
+        .planInfo_container {
+          width: 213px;
+          min-width: 0;
         }
       }
+    }
+  }
+}
+
+@media (max-width: 640px) {
+  .cost_info {
+    height: 285vh;
+    .select_plan {
+      flex-direction: column;
+      height: 100%;
+      .planType {
+        height: 100%;
+        flex-direction: column;
+        .planInfo_container {
+          width: 253px;
+        }
+      }
+    }
+  }
+}
+
+///public opinion
+.public_opinion {
+  @include display-prop(space-evenly, center, column);
+  @include contentSize(148vh, 100%);
+  box-sizing: border-box;
+
+  .img_src {
+    display: flex;
+    justify-content: center;
+    align-content: space-evenly;
+    flex-wrap: wrap;
+    height: 70%;
+    gap: 13px;
+    img {
+      @include contentSize(46%, 25%);
+      min-width: 280px;
+    }
+  }
+
+  button {
+    width: 193px;
+    letter-spacing: 1px;
+  }
+}
+
+@media (max-width: 890px) {
+  .public_opinion {
+    height: auto;
+
+    h2,
+    button {
+      margin: 39px;
     }
   }
 }
