--- a/src/component/blogPage/blogStyle.scss
+++ b/src/component/blogPage/blogStyle.scss
@@ -37,20 +37,14 @@ p {
   color: rgb(139, 139, 139);
 }
 
-// .aboutBlog {
-//   div {
-//     width: auto;
-//   }
-// }
-
-.main_header {
+.aboutBlog {
   @include display-prop(center, center, column);
   height: 88vh;
   line-height: 2.5rem;
   background: rgb(248, 248, 248);
 
   div {
-    width: 210px;
+    width: 280px;
     text-align: center;
 
     h3 {
@@ -90,7 +84,7 @@ p {
   gap: 16px;
 
   .first_rowOf_body {
-    @include contentSize(373px, 25%);
+    @include contentSize(343px, 25%);
     display: flex;
     flex-direction: column;
     box-shadow: 2px 4px 8px rgb(190, 190, 190);
@@ -158,8 +152,8 @@ p {
 @media (max-width: 600px) {
   .blog_body_content {
     .first_rowOf_body {
-      width: 56%;
-      min-width: 274px;
+      width: 51%;
+      min-width: 254px;
       height: 382px;
     }
   }
