--- a/src/component/pricingPage/stylesheet/planInfo.scss
+++ b/src/component/pricingPage/stylesheet/planInfo.scss
@@ -37,99 +37,6 @@ p {
   color: rgb(139, 139, 139);
 }
 
-//about price
-.aboutPrice {
-  @include display-prop(center, center, column);
-  height: 88vh;
-  line-height: 2.5rem;
-  background: rgb(248, 248, 248);
-
-  div {
-    width: auto !important;
-    text-align: center;
-
-    h3 {
-      height: 49px;
-      color: rgb(120, 120, 120);
-    }
-    h1 {
-      height: auto;
-      min-width: 291px;
-      font-weight: 800;
-
-      span {
-        background: linear-gradient(
-          to bottom right,
-          rgba(0, 243, 185, 0.87) 10%,
-          rgba(33, 135, 255, 0.87)
-        );
-        background-clip: text;
-        color: transparent;
-      }
-    }
-  }
-  p {
-    width: 36%;
-    min-width: 193px;
-    line-height: 1.4rem;
-    margin: 13px;
-    text-align: center;
-  }
-}
-
-.FAQ {
-  @include contentSize(73vh, 100%);
-  display: grid;
-  justify-content: center;
-  align-content: space-evenly;
-  grid-template-columns: auto auto;
-  column-gap: 5px;
-  box-sizing: border-box;
-
-  li {
-    @include fontProp(0.91em, bold);
-    list-style: none;
-    margin: 16px;
-    padding: 7px;
-    color: rgb(50, 50, 50);
-
-    &::after {
-      box-sizing: border-box;
-      content: url("./sub_plan_info/image/Vector.png");
-      float: right;
-      height: 22px;
-      width: 21px;
-      margin-left: 16px;
-      text-align: center;
-    }
-  }
-
-  h2 {
-    grid-column: 1/3;
-    text-align: center;
-    color: $brandColor;
-  }
-  hr {
-    grid-column: 1/3;
-    border: 1px solid rgb(150, 150, 150);
-    box-shadow: 0 0 1px rgb(150, 150, 150);
-  }
-}
-
-@media (max-width: 480px) {
-  .FAQ {
-    display: flex;
-    flex-direction: column;
-    height: auto;
-
-    li {
-      margin: 13px;
-    }
-  }
-}
-
-//////// plan info
-
 .cost_info {
   height: 145vh;
   display: flex;
@@ -223,11 +130,11 @@ p {
           }
 
           .selected::before {
-            background: url("./sub_plan_info/image/selected.png") no-repeat;
+            background: url("../sub_plan_info/image/selected.png") no-repeat;
             background-size: contain;
           }
           .notSelected::before {
-            background: url("./sub_plan_info/image/notSelected.png") no-repeat;
+            background: url("../sub_plan_info/image/notSelected.png") no-repeat;
             background-size: contain;
           }
         }
@@ -253,7 +160,7 @@ p {
           }
 
           .selected_with_white::before {
-            background: url("./sub_plan_info/image/standardPlanSelector.png")
+            background: url("../sub_plan_info/image/standardPlanSelector.png")
               no-repeat;
             background-size: contain;
           }
@@ -261,7 +168,7 @@ p {
 
         &:last-child {
           .fullySupported::before {
-            background: url("./sub_plan_info/image/selected.png") no-repeat;
+            background: url("../sub_plan_info/image/selected.png") no-repeat;
             background-size: contain;
           }
         }
@@ -306,42 +213,6 @@ p {
           width: 253px;
         }
       }
-    }
-  }
-}
-
-///public opinion
-.public_opinion {
-  @include display-prop(space-evenly, center, column);
-  @include contentSize(148vh, 100%);
-  box-sizing: border-box;
-
-  .img_src {
-    display: flex;
-    justify-content: center;
-    align-content: space-evenly;
-    flex-wrap: wrap;
-    height: 70%;
-    gap: 13px;
-    img {
-      @include contentSize(46%, 25%);
-      min-width: 280px;
-    }
-  }
-
-  button {
-    width: 193px;
-    letter-spacing: 1px;
-  }
-}
-
-@media (max-width: 890px) {
-  .public_opinion {
-    height: auto;
-
-    h2,
-    button {
-      margin: 39px;
     }
   }
 }
