--- a/src/component/userPage/stylesheet/loginStyle.scss
+++ b/src/component/userPage/stylesheet/loginStyle.scss
@@ -1,45 +1,9 @@
-$brandColor: rgba(32, 145, 249, 1);
-@mixin display-prop($justContent, $alingItems, $direction) {
-  display: flex;
-  justify-content: $justContent;
-  align-items: $alingItems;
-  flex-direction: $direction;
-}
-@mixin contentSize($hgt, $wdt) {
-  height: $hgt;
-  width: $wdt;
-}
-@mixin fontProp($size, $isBold) {
-  font-size: $size;
-  font-weight: $isBold;
-}
-* {
-  margin: 0;
-  padding: 0;
-  letter-spacing: 0.03em;
-  font-family: sans-serif;
-}
-[type="button"] {
-  @include contentSize(42px, 92px);
-  @include fontProp(0.78em, bold);
-  background-color: $brandColor;
-  color: white;
-  border-radius: 5px;
-  border: 0;
-  padding: 6px;
-  box-sizing: border-box;
-
-  &:active {
-    transform: scale(0.93);
-  }
-}
-p {
-  color: rgb(139, 139, 139);
-}
+@import "../../../style.scss";
 
 .login_page {
   display: flex;
   justify-content: space-evenly;
+  height: 69vh;
 
   .user_login {
     @include contentSize(80%, 45%);
@@ -79,9 +43,8 @@ p {
         gap: 3px;
 
         input {
+          @include contentSize(39px, 90%);
           border: 2px solid $brandColor;
-          height: 39px;
-          width: 90%;
           border-radius: 6px;
           padding-left: 12px;
           box-sizing: border-box;
@@ -103,12 +66,20 @@ p {
       font-weight: 100;
       span {
         font-weight: 800;
+        a {
+          text-decoration: none;
+          color: $brandColor;
+
+          &:hover {
+            text-decoration: underline;
+            color: red;
+          }
+        }
       }
     }
   }
   .login_logo {
-    height: 80vh;
-    width: 30%;
+    @include contentSize(inherit, 30%);
     min-width: 209px;
     background: url("../userAuth_img/iPhone_desk.png") no-repeat center;
     background-size: contain;
@@ -131,8 +102,7 @@ p {
 @media (width: 820px), (width: 768px), (width: 912px) {
   .login_page {
     .login_logo {
-      height: 50vh;
-      width: 50%;
+      @include contentSize(50vh, 50%);
       align-self: flex-start;
     }
   }
