--- a/src/component/pricingPage/stylesheet/planInfo.scss
+++ b/src/component/pricingPage/stylesheet/planInfo.scss
@@ -1,44 +1,7 @@
-$brandColor: rgba(32, 145, 249, 1);
-@mixin display-prop($justContent, $alingItems, $direction) {
-  display: flex;
-  justify-content: $justContent;
-  align-items: $alingItems;
-  flex-direction: $direction;
-}
-@mixin contentSize($hgt, $wdt) {
-  height: $hgt;
-  width: $wdt;
-}
-@mixin fontProp($size, $isBold) {
-  font-size: $size;
-  font-weight: $isBold;
-}
-* {
-  margin: 0;
-  padding: 0;
-  letter-spacing: 0.03em;
-  font-family: sans-serif;
-}
-[type="button"] {
-  @include contentSize(42px, 92px);
-  @include fontProp(0.78em, bold);
-  background-color: $brandColor;
-  color: white;
-  border-radius: 5px;
-  border: 0;
-  padding: 6px;
-  box-sizing: border-box;
-
-  &:active {
-    transform: scale(0.93);
-  }
-}
-p {
-  color: rgb(139, 139, 139);
-}
+@import "../../../style.scss";
 
 .cost_info {
-  height: 145vh;
+  height: 115vh;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
@@ -47,7 +10,9 @@ p {
 
   .toggle_plan {
     height: 33px;
+    margin-top: 54px;
     text-align: center;
+
     button {
       @include contentSize(inherit, 123px);
       border: 1px solid rgb(207, 207, 207);
@@ -187,7 +152,6 @@ p {
 
 @media (max-width: 785px) {
   .cost_info {
-    height: auto;
     .select_plan {
       flex-direction: column;
       .planType {
