--- a/src/component/profilePage/bodyContent/authorBodyStyle.scss
+++ b/src/component/profilePage/bodyContent/authorBodyStyle.scss
@@ -1,30 +1,5 @@
-$brandColor: rgba(32, 145, 249, 1);
+@import "../../../style.scss";
 
-@mixin display-prop($justContent, $alingItems, $direction) {
-  display: flex;
-  justify-content: $justContent;
-  align-items: $alingItems;
-  flex-direction: $direction;
-}
-
-@mixin contentSize($hgt, $wdt) {
-  height: $hgt;
-  width: $wdt;
-}
-
-@mixin fontProp($size, $isBold) {
-  font-size: $size;
-  font-weight: $isBold;
-}
-
-* {
-  margin: 0;
-  padding: 0;
-  letter-spacing: 0.03em;
-  font-family: sans-serif;
-}
-
-////author body content
 .featureCard {
   @include contentSize(fit-content, auto);
   display: flex;
