--- a/src/component/userPage/stylesheet/signupPage.scss
+++ b/src/component/userPage/stylesheet/signupPage.scss
@@ -1,48 +1,14 @@
-$brandColor: rgba(32, 145, 249, 1);
-@mixin display-prop($justContent, $alingItems, $direction) {
-  display: flex;
-  justify-content: $justContent;
-  align-items: $alingItems;
-  flex-direction: $direction;
-}
-@mixin contentSize($hgt, $wdt) {
-  height: $hgt;
-  width: $wdt;
-}
-@mixin fontProp($size, $isBold) {
-  font-size: $size;
-  font-weight: $isBold;
-}
-* {
-  margin: 0;
-  padding: 0;
-  letter-spacing: 0.03em;
-  font-family: sans-serif;
-}
-[type="button"] {
-  @include contentSize(42px, 92px);
-  @include fontProp(0.78em, bold);
-  background-color: $brandColor;
-  color: white;
-  border-radius: 5px;
-  border: 0;
-  padding: 6px;
-  box-sizing: border-box;
-
-  &:active {
-    transform: scale(0.93);
-  }
-}
-p {
-  color: rgb(139, 139, 139);
-}
+@import "../../../style.scss";
 
 .signup_page {
+  @include contentSize(71vh, 100%);
   display: flex;
   justify-content: space-evenly;
+  box-sizing: border-box;
 
   .signup_logo {
-    @include contentSize(inherit, 40%);
+    align-self: center;
+    @include contentSize(97%, 40%);
     background: url("../userAuth_img/signup.png") no-repeat center;
     background-size: 100% 100%;
   }
@@ -82,13 +48,12 @@ p {
         height: 90%;
 
         .userAuth {
-          border: 2px solid $brandColor;
-          height: 37px;
-          width: 90%;
+          @include contentSize(37px, 90%);
           max-width: 453px;
-          border-radius: 6px;
           padding-left: 12px;
           box-sizing: border-box;
+          border: 2px solid $brandColor;
+          border-radius: 6px;
 
           &::placeholder {
             font-size: 0.8em;
@@ -119,6 +84,15 @@ p {
         font-weight: 100;
         span {
           font-weight: 800;
+          a {
+            text-decoration: none;
+            color: $brandColor;
+
+            &:hover {
+              text-decoration: underline;
+              color: red;
+            }
+          }
         }
       }
     }
