--- a/src/component/blogPage/stylesheet/blogBody.scss
+++ b/src/component/blogPage/stylesheet/blogBody.scss
@@ -21,6 +21,7 @@
         list-style: none;
         margin-right: 12px;
         color: $brandColor;
+        cursor: pointer;
       }
     }
     .about_blog_img_src {
